fixed bottom row alignment

--- a/views/site/recess.styl
+++ b/views/site/recess.styl
@@ -101,7 +101,9 @@ body section > #recess
 
                     h2
                         font-size 1.2em
+                        line-height 1.3em
                         margin-bottom 5px
+                        height 44px
                     p.teaser
                         color #444
                         line-height 1.3em
@@ -110,6 +112,7 @@ body section > #recess
                         width 70px
                         height 70px
                         float right
+                        margin-left 7px
         > .last > .container.block
                 margin-right 0px
     .multimedia
